Added dummy-case-study page

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,3 @@
 {
-  "plugins": ["prettier-plugin-tailwindcss"],
-  "tailwindFunctions": ["clsx", "cn", "twMerge"]
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
